# multimodal-rag

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
api/: main.py
evaluation/: ragas_eval.py  run_eval.py
generation/: generator.py
ingestion/: embedder.py  parser.py  pipeline.py  vector_store.py
logs/: rag_traces.jsonl
observability/: tracer.py
orchestration/: pipeline.py
retrieval/: query_rewriter.py  retriever.py
utils/: models.py
