[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.85.0",
    "celery[redis]>=5.6.2",
    "cohere>=5.20.7",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "ml-dtypes>=0.5.4",
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "open-clip-torch>=3.3.0",
    "openai>=2.29.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qdrant-client==1.11.3",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "unstructured[docx,image,pdf]>=0.21.5",
    "uvicorn[standard]>=0.42.0",
]
