[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "celery[redis]>=5.6.3",
    "cohere>=5.21.1",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "gradio>=6.11.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.6",
    "ml-dtypes>=0.5.4",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "qdrant-client==1.11.3",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "unstructured[docx,image,pdf]>=0.22.16",
    "uvicorn[standard]>=0.44.0",
    "xlrd>=2.0.2",
]
